# be-shell

./: CMakeLists.txt  README  battery.cpp  battery.h  be.plugged.cpp  be.plugged.h  be.run.cpp  be.shell.cpp  be.shell.desktop  be.shell.h  button.cpp  button.h  claws.cpp  claws.h  clock.cpp  clock.h  configure  dbus_button.h  dbus_claws.h  dbus_desktop.h  dbus_gmenu.h  dbus_info.h  dbus_runner.h  dbus_shell.h  desktop.cpp  desktop.h  flowlayout.cpp  flowlayout.h  globalmenu.cpp  globalmenu.h  hmenubar.cpp  hmenubar.h  infocenter.cpp  infocenter.h  krunner.desktop  label.cpp  label.h  mediatray.cpp  mediatray.h  menubar.cpp  (+29 more)
be.idle.imap/: be.idle.imap.conf  be.idle.imap.cpp  be.idle.imap.h  be.idle.imap.pro
be.watched/: Makefile  README  be.watched  be.watched.cpp  be.watched.h  be.watched.pro
examples/: README  be.shell.beos  be.shell.win2000
examples/Themes/beos/: style.css
examples/Themes/osx/: style.css
examples/Themes/windows/: style.css
i18n/: CMakeLists.txt  be.shell.pot  de.po  es.po  fr.po  it.po  pl.po  zh_CN.po  zh_TW.po
scripts/: README  be.apt  be.fifo.daemon  be.mailed  be.pacman  be.random.wp.sh  gen_bwp.sh  gen_places_menu.sh  gen_system_menu.sh  netcfg  netcfg-profiles  netquality  nowplaying  rdf2htm  recent_files.sh  rss2htm  setwallpaper  temp.sh  topfeeder.sh  wifi-select
scripts/weather/: COPYRIGHT  README  de  it  weather.sh
wallpaper/: blue_diag.bwp  blue_grid_1.bwp  blue_grid_2.bwp  blue_scan_1.bwp  blue_scan_2.bwp  blue_scan_3.bwp  breezy_day.bwp  breezy_night.bwp  dark_lochblech.bwp  graphite_linen.bwp  haiku_newrepublic.bwp  verticalw.bwp
